--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "http": "^0.0.1-security",
     "http-status": "^1.5.0",
+    "inversify": "^6.0.1",
     "joi": "^17.4.2",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.2",
