--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/server.ts",
-    "dev": "nodemon src/server/ts",
+    "dev": "nodemon src/server.ts",
     "db": "ts-node src/buildDB.ts"
   },
   "author": "",
