--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "http-status": "^1.5.0",
     "inversify": "^6.0.1",
     "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.2",
     "path": "^0.12.7",
@@ -37,6 +39,8 @@
     "@types/express": "^4.17.13",
     "@types/http-status": "^1.1.2",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/moment": "^2.13.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.1",
     "@types/swagger-jsdoc": "^6.0.1",
