--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,8 @@
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.2",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.7.0",
@@ -43,6 +45,8 @@
     "@types/moment": "^2.13.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.1",
+    "@types/passport": "^1.0.7",
+    "@types/passport-jwt": "^3.0.6",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/validator": "^13.6.3",
