--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "inversify": "^6.0.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.2",
