--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,18 @@
     "@types/node": "^12.20.33",
     "@types/react": "^17.0.31",
     "@types/react-dom": "^17.0.10",
+    "@types/react-redux": "^7.1.20",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
     "react-social-login-buttons": "^3.6.0",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
