--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,18 @@
     "@types/react": "^17.0.31",
     "@types/react-dom": "^17.0.10",
     "@types/react-redux": "^7.1.20",
+    "@types/react-router-dom": "^5.3.1",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
+    "axios": "^0.23.0",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^6.0.1",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-social-login-buttons": "^3.6.0",
     "redux": "^4.1.1",
