--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.23.0",
+    "firebase": "^9.1.3",
     "jwt-decode": "^3.1.2",
     "node-sass": "^6.0.1",
     "query-string": "^7.0.1",
