--- a/client/package.json
+++ b/client/package.json
@@ -19,13 +19,16 @@
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.23.0",
+    "draft-js": "^0.11.7",
     "firebase": "^9.1.3",
     "jwt-decode": "^3.1.2",
+    "mui-rte": "^2.0.1",
     "node-sass": "^6.0.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-hook-form": "^7.17.5",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
@@ -60,5 +63,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-draft-wysiwyg": "^1.13.3"
   }
 }
