--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.17.5",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
@@ -65,6 +66,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-draft-wysiwyg": "^1.13.3"
+    "@types/react-draft-wysiwyg": "^1.13.3",
+    "@types/react-helmet": "^6.1.4"
   }
 }
