--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -7,6 +7,8 @@
       "dom.iterable",
       "esnext"
     ],
+    "noImplicitAny": false,
+    "noEmitOnError": true,
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
