--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.2",
+    "nodemailer": "^6.7.0",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
