--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "node-sass": "^6.0.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
@@ -67,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-draft-wysiwyg": "^1.13.3",
     "@types/react-helmet": "^6.1.4"
   }
