--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@draft-js-plugins/editor": "^4.1.0",
     "@hookform/resolvers": "^2.8.2",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -21,6 +22,7 @@
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.23.0",
     "draft-js": "^0.11.7",
+    "draft-js-image-plugin": "^2.0.7",
     "firebase": "^9.1.3",
     "jwt-decode": "^3.1.2",
     "mui-rte": "^2.0.1",
