--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.23.0",
     "draft-js": "^0.11.7",
     "draft-js-image-plugin": "^2.0.7",
+    "draftjs-to-html": "^0.9.1",
     "firebase": "^9.1.3",
     "jwt-decode": "^3.1.2",
     "mui-rte": "^2.0.1",
