--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/moment": "^1.3.9",
     "@draft-js-plugins/editor": "^4.1.0",
     "@hookform/resolvers": "^2.8.2",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -26,6 +28,7 @@
     "draftjs-to-html": "^0.9.1",
     "firebase": "^9.1.3",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.26.0",
     "mui-rte": "^2.0.1",
     "node-sass": "^6.0.1",
     "query-string": "^7.0.1",
