--- a/client/package.json
+++ b/client/package.json
@@ -28,8 +28,8 @@
     "draftjs-to-html": "^0.9.1",
     "firebase": "^9.1.3",
     "jwt-decode": "^3.1.2",
+    "material-ui-dropzone": "^3.5.0",
     "moment": "^2.26.0",
-    "mui-rte": "^2.0.1",
     "node-sass": "^6.0.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
