--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-file-viewer": "^1.2.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.17.5",
     "react-redux": "^7.2.5",
