--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "react-social-login-buttons": "^3.6.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.4.0",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
