--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.7.0",
     "sequelize-typescript": "^2.1.1",
+    "socket.io": "^4.4.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3",
@@ -53,6 +54,7 @@
     "@types/node": "^16.11.1",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
+    "@types/socket.io": "^3.0.2",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/validator": "^13.6.3",
